# reflect

./: CHANGELOG.md  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  TODO_PATH_NAVIGATION.md  vcpkg.json
cmake/: reflect-json-targets.cmake  reflection-config.cmake.in
examples/: CMakeLists.txt  demo_conversions.cpp  json_reflection_example.cpp  json_reflection_test.cpp
include/: reflection.hpp
include/deprecated/: reflect_json.hpp  version.hpp
include/reflect_json/: json_reflection.hpp  reflect_json.hpp
include/reflection/: core.hpp  json.hpp
tests/: CMakeLists.txt  array_support_tests.cpp  basic_reflection_tests.cpp  comprehensive_type_conversion_tests.cpp  enum_duration_integration_tests.cpp  json_reflection_test.cpp  path_navigation_tests.cpp  type_conversion_tests.cpp  vector_json_tests.cpp
